backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetingapp-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: greetingapp-backend
  template:
    metadata:
      labels:
        app: greetingapp-backend
    spec:
      containers:
        - name: greetingapp-backend
          image: afakharany/greetingapp-backend
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
